--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             android:onClick="iconbuttonmessage"
-            android:text="an icon &amp; a message &amp; a button" />
+            android:text=" a message &amp; an icon &amp; a button" />
 
         <Space
             android:layout_width="match_parent"
