--- a/app/src/main/res/layout/activity_creds.xml
+++ b/app/src/main/res/layout/activity_creds.xml
@@ -8,4 +8,21 @@
     android:orientation="vertical"
     tools:context=".CredsActivity">
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/back" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"/>
 </LinearLayout>
